# CASSA

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  Roadmap.md  sgxenv.mk
NormalApp/: CMakeLists.txt
NormalApp/App/: App.cpp  App.h
NormalApp/App/utils/: command_handler.cpp  command_handler.h  command_handler.hpp  parse_command.hpp
NormalApp/App/utils/include/: command_handler.h  logger_affinity.h
NormalApp/Enclave/: Enclave.cpp  Enclave.h  global_variables.h
NormalApp/Enclave/common/: hash.cpp  hash.h  memo.txt
NormalApp/Enclave/masstree/: masstree_insert.cpp  masstree_put.cpp  masstree_remove.cpp
NormalApp/Enclave/masstree/include/: masstree.h  masstree_insert.h  masstree_key.h  masstree_put.h  masstree_remove.h  masstree_version.h
NormalApp/Enclave/silo/: OCH.cpp  log_buffer.cpp  logger.cpp  notifier.cpp  transaction.cpp  util.cpp
NormalApp/Enclave/silo/include/: atomic_tool.h  atomic_wrapper.h  cache_line_size.h  common.h  log.h  log_buffer.h  log_queue.h  log_writer.h  logger.h  notifier.h  procedure.h  random.h  silo_op_element.h  silo_wapper.h  transaction.h  tuple.h  util.h  zipf.h
NormalApp/Enclave/silo_cc/: silo_log_buffer.cpp  silo_log_queue.cpp  silo_logger.cpp  silo_notifier.cpp  silo_transaction.cpp  silo_util.cpp
NormalApp/Enclave/silo_cc/include/: silo_element.h  silo_log.h  silo_log_buffer.h  silo_logger.h  (+6 more)
NormalApp/Enclave/silo_r/: .gitkeep
NormalApp/Enclave/utils/: atomic_wrapper.h  db_value.h  status.h  transaction_manager.cpp  transaction_manager.h
NormalApp/Include/: consts.h  consts_benchmark.h  result.h  structures.h
(+158 files in other folders)
